# vision

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  run_api.py
config/: settings.py
data/chroma_db/: chroma.sqlite3
docs/: API_README.md
scripts/: add_drug_interactive.py  convert_excel_to_drugs_json.py  populate_knowledge_base.py  scrape_drug_data.py  scrape_drug_info.py  train_chest_xray_model.py  train_dermatology_model.py
src/api/: __init__.py  app.py  dependencies.py  exceptions.py
src/api/models/: __init__.py  requests.py  responses.py
src/api/routes/: __init__.py  analysis.py  health.py  medical.py
src/application/pipeline/: medical_context.py  medical_pipeline.py
src/application/services/: medical_analysis_service.py
src/domain/entities/: medical_diagnosis.py  pipeline_result.py
src/domain/ports/: image_classifier.py
src/infrastructure/: __init__.py
src/infrastructure/classification/: __init__.py  chest_xray_classifier.py  classifier_factory.py  dermatology_classifier.py
tests/: README.md  test_image_analysis_service.py  test_medical_image_analysis_service.py
